@@ -63,7 +63,7 @@
                 <tr class="db_list_normal">
                     <td style="text-align: right;">
                         <f:link.action controller="Variant" action="show" arguments="{variant : variant}">
-                            {variant.sku}
+                            {variant.completeSku}
                         </f:link.action>
                     </td>
                     <f:if condition="{product.beVariantAttribute1}">
