@@ -56,7 +56,7 @@
                     <div class="product-name">{variant.title}</div>
                     <p>
                         <f:translate key="tx_cart_domain_model_order_product.sku.short"/>
-                        : {variant.sku}
+                        : {variant.completeSku}
                     </p>
                 </td>
                 <td class="col-md-2 text-right">
