@@ -35,7 +35,7 @@
                     <div class="product-name">{variant.title}</div>
                     <p>
                         <f:translate key="tx_cart_domain_model_order_product.sku.short"/>
-                        : {variant.sku}
+                        : {variant.completeSku}
                     </p>
                 </td>
                 <td style="text-align: right;">
