@@ -1,10 +1,11 @@
 3.0.0
-    2017-02-19
+    2017-02-21
     Daniel Lorenz <daniel.lorenz@extco.de>
 
     * TASK #63: add quantity discounts / graduated prices for products
     * TASK #56: different shipping / payment configurations for different countries
     * TASK #58: add main category and canonical url for category detail views
+    * BUGFIX #73: change output of product variants sku to variants completeSku for products with variants in cart and order mail
 
 2.4.3
     2017-02-18
